--- a/source/_posts/2012-03-30-octocat.markdown
+++ b/source/_posts/2012-03-30-octocat.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "八爪波笛!"
 date: 2012-03-30 11:22
 comments: true
-categories: [octocat, 波笛]
+categories: [octocat, 波笛, cat]
 ---
 {% img center /attachments/2012-03-30-octocat/octocat.png %}  
 上禮拜看到了github的『八爪貓資料庫』 -- [octodex](http://octodex.github.com/)，馬上決定要做一隻波笛版，於是就有這隻八爪波笛了XD
